--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
-      <button type="button" class="card__like-button"></button>
+      <div>
+        <button type="button" class="card__like-button"></button>
+        <p class="card__like-amount"></p>
+      </div>
     </div>
   </li>
 </template>
